src/objects/Receive_Configuration_Version__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_Configuration__c</fullName>
        <label>Easy Rest Receive Configuration</label>
        <referenceTo>Receive_Configuration__c</referenceTo>
        <relationshipLabel>Easy Rest Receive Configuration Versions</relationshipLabel>
        <relationshipName>Easy_Rest_Receive_Configuration_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Schema_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Easy Rest Schema Definition</label>
        <referenceTo>Schema_Definition__c</referenceTo>
        <relationshipLabel>Easy Rest Receive Configuration Versions</relationshipLabel>
        <relationshipName>Easy_Rest_Receive_Configuration_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version_Name__c</fullName>
        <formula>&apos;V&apos; +  TEXT(Version__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Easy Rest Receive Configuration Version</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Easy Rest Receive Configuration Version</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Easy Rest Receive Configuration Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>